April 2009: Initial CPAN release