@@ -1,8 +1,8 @@
 use ExtUtils::MakeMaker;
 
 my $prereqs = {
-  DBI    => 1.40,
-  Fcntl  => 1.05,
+  DBI           => 1.40,
+  File::Tempdir => 0.02,
 };
 
 WriteMakefile(
@@ -10,4 +10,6 @@ WriteMakefile(
   VERSION_FROM  => 'lib/GlobalDBI.pm',
   NAME          => 'GlobalDBI',
   PREREQ_PM     => $prereqs,
+  LICENSE       => 'open_source',
+  AUTHOR        => 'Ryan Rose, Joe Spinney, Alex Ayars <pause@nodekit.org>',
 );
