@@ -1,1 +1,3 @@
+August 2009: Add simple test script, small doc update
+
 April 2009: Initial CPAN release
